<resources>
    <string name="app_name">Indi</string>
    <string name="base_url">https://gateway.infidea.id/</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lupa_kata_sandi"><u>Lupa kata sandi</u></string>
    <string name="belum_punya_akun"><u>Belum punya akun</u></string>
    <string name="saya_menyetujui_syarat_dan_ketentuan_yang_berlaku"><u>Saya menyetujui syarat dan ketentuan yang berlaku</u></string>
    <string name="sudah_punya_akun"><u>Sudah punya akun</u></string>
    <string name="kenalan">Mari Berkenalan dengan Indi</string>
    <string name="kenalan_sub">Selamat datang di aplikasi Indi Smart Speaker! Dengan Indi Smart Speaker, kamu bisa merasakan keajaibannya dalam mempermudah dan mempercepat aktivitas di rumah kesayanganmu.</string>
    <string name="hadir">Indi Hadir Menemani kamu</string>
    <string name="hadir_sub">Kamu bisa berikan instruksi ataupun bertanya pada Indi Smart Speaker hanya dengan menggunakan suara.</string>
    <string name="mulai">Smart Speaker yang Serba Bisa</string>
    <string name="mulai_sub">Indi Smart Speaker yang serba bisa juga bisa memberikan kamu akses untuk memilih dan mengatur fitur yang menjadi prioritasmu.\n\n Tunggu apa lagi? Ayo mulai pengalamanmu bersama Indi Smart Speaker!</string>
    <string name="TnC">Syarat dan ketentuan belum disetujui</string>
    <string name="daftar">Daftar</string>
    <string name="kode_aktivasi_telah_dikirim_masukan_kode_aktivasi_yang_kami_kirim_ke_email_yang_terdaftar">Kode aktivasi telah dikirim, masukan kode aktivasi yang kami kirim ke email yang terdaftar</string>
    <string name="masukan_kode">Masukan Kode</string>
    <string name="kirim_ulang"><u>Kirim Ulang</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silakan_masukkan_email_kamu_yang_terdaftar_di_aplikasi_indi_smart_speaker_untuk_melakukan_aktivasi">Silakan masukkan email kamu yang terdaftar di aplikasi Indi Smart Speaker untuk melakukan aktivasi</string>
    <string name="lupa_kata_sandi_title">Lupa Kata Sandi</string>
    <string name="silakan_masukkan_kata_sandi_baru_akun_kamu_dan_ulangi_kata_sandi_baru">Silakan masukkan kata sandi baru akun kamu dan ulangi kata sandi baru.</string>
    <string name="misi_saya">Misi Saya</string>
    <string name="bantuan">Bantuan</string>
    <string name="device_mgt_online">ON</string>
    <string name="device_mgt_offline">OFF</string>
    <string name="_1_pastikan_lampu_sudah_terpasang_dan_sudah_menyala">Pastikan lampu sudah terpasang dan sudah menyala,</string>
    <string name="_2_mati_dan_nyalakan_smart_lamp_kamu_dengan_cepat_sampai_lampu_berkedip_kedip">Mati dan nyalakan Smart Lamp kamu dengan cepat sampai lampu berkedip-kedip</string>
    <string name="_3_setelah_lampu_berkedip_dengan_cepat_tekan_tombol_b_konfirmasi_b_untuk_melanjutkan">Setelah lampu berkedip dengan cepat, tekan tombol <b>konfirmasi</b> untuk melanjutkan</string>
    <string name="konfirmasi_lampu_berkedip_cepat">Konfirmasi lampu berkedip cepat</string>
    <string name="perangkatmu_sedang_melakukan_pencarian_wi_fi_terdekat_tunggu_sebentar_lagi_ya">Perangkatmu sedang melakukan pencarian Wi-Fi terdekat. Tunggu sebentar lagi ya!</string>
    <string name="mencari_jaringan_wi_fi_terdekat">Mencari jaringan Wi-Fi terdekat...</string>
    <string name="menghubungkan_smart_lamp_dengan_jaringan_wi_fi">Menghubungkan Smart Lamp dengan jaringan Wi-Fi</string>
    <string name="tunggu_sebentar_lagi_ya_perangkatmu_sedang_melakukan_penyambungan_dengan_wifi_dan_smartphone">Tunggu sebentar lagi ya! Perangkatmu sedang melakukan penyambungan dengan wifi dan smartphone.</string>
    <string name="pass_telah_diperbarui">Kata sandi telah diperbarui</string>
    <string name="berhasil">Berhasil</string>
    <string name="aktifasi_berhasil">Aktivasi Berhasil</string>
    <string name="lanjut_login">Silahkan lanjutkan Login</string>
    <string name="remove_device">Berhasil Perangkat telah dihapus dari aplikasi</string>
    <string name="hapus_lamp">Apakah kamu yakin akan menghapus Smart Lamp ini dari aplikasi?</string>
    <string name="hapus_skill">Apakah kamu yakin akan menghapus keahlian ini dari favorit?</string>
    <string name="syarat_dan_layanan">Syarat dan Layanan</string>
    <string name="tentang_indi_smart_speaker">Tentang Indi Smart Speaker</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="keluar_akun">Keluar Akun</string>
    <string name="alarm_personal">Alarm Personal</string>
    <string name="kamu_bisa_mengatur_alarm_dengan_fitur_personalisasi_dengan_merekam_suara_dan_membacakan_teks_melalui_smart_speaker_mu">Kamu bisa mengatur alarm dengan fitur personalisasi dengan merekam suara dan membacakan teks melalui Smart Speaker-mu</string>
    <string name="rekaman_suara">Rekaman Suara</string>
    <string name="default_skill">Default</string>
    <string name="pengingat_azan">Pengingat Adzan</string>
    <string name="telusuri_keahlian">Telusuri Keahlian</string>
    <string name="asisten_harian">Asisten Harian</string>
    <string name="konten_edukasi_dan_berita">Konten Edukasi dan Berita</string>
    <string name="islami">Islami</string>
    <string name="remove_favorite">Hapus dari keahlian favorit</string>
    <string name="add_favorite">Tambahkan ke keahlian favorit</string>
</resources>