<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.pickFavoriteSkill.PickFavoriteActivity">

        <include
            android:id="@+id/top_bar"
            layout="@layout/frame_action_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:text="@string/telusuri_keahlian"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/asisten_harian"
            android:textColor="@color/dark_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView30"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/konten_edukasi_dan_berita"
            android:textColor="@color/dark_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@+id/RV_asisten" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/islami"
            android:textColor="@color/dark_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/RV_konten" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_asisten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView33"
            app:shimmer_repeat_mode="restart"
            app:shimmer_shape="radial">

            <include layout="@layout/item_loading_skill"></include>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            app:shimmer_repeat_mode="restart"
            app:shimmer_shape="radial">

            <include layout="@layout/item_loading_skill"></include>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_islami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/RV_islami"
            app:shimmer_repeat_mode="restart"
            app:shimmer_shape="radial">

            <include layout="@layout/item_loading_skill"></include>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_asisten"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_konten"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_islami"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <ProgressBar
            android:id="@+id/PB_pick_skill"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>