<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.emailVerification.EmailVerificationActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/masukan_kode"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/kode_aktivasi_telah_dikirim_masukan_kode_aktivasi_yang_kami_kirim_ke_email_yang_terdaftar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <com.chaos.view.PinView
        android:id="@+id/otp_view_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:inputType="number"
        android:focusable="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        android:itemBackground="@color/dark_white"
        android:textColor="@android:color/black"
        app:itemBackground="@color/dark_white"
        app:itemCount="4"
        app:itemHeight="78dp"
        app:itemRadius="8dp"
        app:itemSpacing="8dp"
        app:itemWidth="78dp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:lineColor="@color/dark_white"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/TV_count_down_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/otp_view_forget"
        app:layout_constraintStart_toStartOf="@+id/otp_view_forget"
        app:layout_constraintTop_toBottomOf="@+id/otp_view_forget" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Belum menerima kode?"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/TV_resend"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_count_down_forget" />

    <TextView
        android:id="@+id/TV_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kirim_ulang"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <ProgressBar
        android:id="@+id/PB_verify_email"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_error_forget_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textColor="@color/yellow"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/TV_resend"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ProgressBar
        android:id="@+id/PB_input_code"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include4"
        layout="@layout/frame_forget_password_topbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>